--- a/index.html
+++ b/index.html
@@ -1315,7 +1315,7 @@ var _hmt = _hmt || [];
      <div class="right_cron"></div>
    </div>
  </li>  
- <li class="desktop_icon" id="win11" path="https://haiyong.site/win"> <span class="icon"><img src="icon/icon15.png"/></span>
+ <li class="desktop_icon" id="win11" path="index.html"> <span class="icon"><img src="icon/icon15.png"/></span>
    <div class="text">欢迎套娃
      <div class="right_cron"></div>
    </div>
